@@ -657,3 +657,4 @@ Week of May 14, 2007
        - BZ 297 - Make axis tick marks draw correctly if there's only one channel in 
         the spectrum (well really just don't draw tick marks at all.
        - Add code to support gate observers.. for new displayer.
+       - Add -trace subcommand to gate.
